--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <meta property="og:title" content="My Portfolio"> 
-    <meta property="og:description" content="hey my self pallavi">
+    <meta property="og:description" content="Learn about 13 features that set Ahrefs apart from the competition." />
      <meta property="og:image" content="https://th.bing.com/th/id/OIP.V7W-BQe2xQq_qE5FaTrzrAHaFj?w=231&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7">
 </head >
 <body>
