--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <meta property="og:title" content="My Port"> 
     <meta property="og:description" content="Learn about 13 features that set Ahrefs apart from the competition.">
-     <meta property="og:image" content="https://th.bing.com/th/id/OIP.V7W-BQe2xQq_qE5FaTrzrAHaFj?w=231&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7">
+     <meta property="og:image" content="https://th.bing.com/th?q=My+Portfolio+Cover+Design&w=120&h=120&c=1&rs=1&qlt=90&cb=1&dpr=1.3&pid=InlineBlock&mkt=en-IN&cc=IN&setlang=en&adlt=strict&t=1&mw=247">
 </head >
 <body>
     
