--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta property="og:title" content="My Portfolio"> 
     <meta property="og:description" content="My Portfolio is a showcase of my skills, projects, and experiences in web development and design. This HTML project aims to present a visually appealing and user-friendly portfolio website that highlights my accomplishments and capabilities.">
      <meta property="og:image" content="https://th.bing.com/th/id/OIP.Zb31brCNyzmggTDS1Hee0gHaKe?w=199&h=281&c=7&r=0&o=5&dpr=1.3&pid=1.7">
-    <meta property="og:image:width" content="100">
+    <meta property="og:image:width" content="1280">
+    <meta property="og:image:height" content="720">
 </head >
 <body>
     
