--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <meta property="og:title" content="My Portfolio"> 
     <meta property="og:description" content="My Portfolio is a showcase of my skills, projects, and experiences in web development and design. This HTML project aims to present a visually appealing and user-friendly portfolio website that highlights my accomplishments and capabilities.">
-     <meta property="og:image" content="https://mir-s3-cdn-cf.behance.net/projects/404/8bbab2194264025.Y3JvcCwxMDA3LDc4OCwxOTcsMA.png">
+     <meta property="og:image" content="https://th.bing.com/th/id/OIP.V7W-BQe2xQq_qE5FaTrzrAHaFj?w=231&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7">
     <meta property="og:image:width" content="1280">
         <meta property="og:image:height" content="720">
 </head >
